# LearningComputerGraphics

./: CMakeLists.txt  README.md  main.cpp
include/: cyr_definitions.h  primitive.h
src/: primitive.cpp
